--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
         <version>1.0-SNAPSHOT</version>
         <repositories>
             <repository>
-                <id>papermc-repo</id>
+                <id>papermc</id>
                 <url>https://papermc.io/repo/repository/maven-public/</url>
             </repository>
             <repository>
@@ -24,15 +24,15 @@
         </repositories>
         <dependencies>
             <dependency>
-                <groupId>com.destroystokyo.paper</groupId>
+                <groupId>io.papermc.paper</groupId>
                 <artifactId>paper-api</artifactId>
-                <version>1.16.5-R0.1-SNAPSHOT</version>
+                <version>1.17.1-R0.1-SNAPSHOT</version>
                 <scope>provided</scope>
             </dependency>
             <dependency>
                 <groupId>de.tr7zw</groupId>
                 <artifactId>item-nbt-api-plugin</artifactId>
-                <version>2.7.1</version>
+                <version>2.8.0</version>
             </dependency>
         </dependencies>
         <properties>
