クリックイベントと短縮系追加

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -6,6 +6,7 @@ depend: [NBTAPI]
 commands:
   battleroyale:
     usage: "/battleroyale help"
+    aliases: [bat, btr, battle]
 
 permissions:
   op:
